endpoint now accepts crop
